src/PascalLikeParser.java
// Generated from C:/Users/Usuario/OneDrive/Escritorio/Estudios/ProcesadoresDeLenguajes/Pascal_To_C/Pascal_To_C/src/PascalLike.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PascalLikeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, ID=42, CONSTINT=43, CONSTREAL=44, CONSTLIT=45, 
		WS=46, COMMENT=47;
	public static final int
		RULE_programa = 0, RULE_bloque = 1, RULE_declist = 2, RULE_declist_item_list = 3, 
		RULE_declist_item = 4, RULE_constdecl = 5, RULE_ctelist = 6, RULE_ctelist_tail = 7, 
		RULE_simovalue = 8, RULE_vardecl = 9, RULE_defvarlist = 10, RULE_defvarlist_tail = 11, 
		RULE_varlist = 12, RULE_varlist_tail = 13, RULE_tbas = 14, RULE_procdecl = 15, 
		RULE_funcdecl = 16, RULE_formal_paramlist_opt = 17, RULE_formal_paramlist = 18, 
		RULE_formal_param_tail = 19, RULE_formal_param = 20, RULE_sentlist = 21, 
		RULE_sent_tail = 22, RULE_sent_tail_aux = 23, RULE_sent = 24, RULE_sent_id_tail = 25, 
		RULE_asig = 26, RULE_proc_call = 27, RULE_subparamlist_opt = 28, RULE_subparamlist = 29, 
		RULE_explist_opt = 30, RULE_explist = 31, RULE_explist_tail = 32, RULE_exp = 33, 
		RULE_exp_tail = 34, RULE_term = 35, RULE_term_tail = 36, RULE_factor = 37, 
		RULE_exp_no_paren = 38, RULE_term_no_paren = 39, RULE_factor_no_paren = 40, 
		RULE_expcond = 41, RULE_expcond_tail = 42, RULE_and_term = 43, RULE_and_term_tail = 44, 
		RULE_not_term = 45, RULE_factorcond = 46, RULE_opcomp = 47, RULE_if_sent = 48, 
		RULE_else_block_opt = 49, RULE_else_block = 50, RULE_while_sent = 51, 
		RULE_repeat_sent = 52, RULE_for_sent = 53, RULE_inc = 54;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "bloque", "declist", "declist_item_list", "declist_item", 
			"constdecl", "ctelist", "ctelist_tail", "simovalue", "vardecl", "defvarlist", 
			"defvarlist_tail", "varlist", "varlist_tail", "tbas", "procdecl", "funcdecl", 
			"formal_paramlist_opt", "formal_paramlist", "formal_param_tail", "formal_param", 
			"sentlist", "sent_tail", "sent_tail_aux", "sent", "sent_id_tail", "asig", 
			"proc_call", "subparamlist_opt", "subparamlist", "explist_opt", "explist", 
			"explist_tail", "exp", "exp_tail", "term", "term_tail", "factor", "exp_no_paren", 
			"term_no_paren", "factor_no_paren", "expcond", "expcond_tail", "and_term", 
			"and_term_tail", "not_term", "factorcond", "opcomp", "if_sent", "else_block_opt", 
			"else_block", "while_sent", "repeat_sent", "for_sent", "inc"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'program'", "';'", "'.'", "'unit'", "'begin'", "'end'", "'const'", 
			"'='", "'var'", "':'", "','", "'INTEGER'", "'REAL'", "'procedure'", "'function'", 
			"'('", "')'", "':='", "'+'", "'-'", "'*'", "'div'", "'mod'", "'or'", 
			"'and'", "'not'", "'<>'", "'<'", "'>'", "'<='", "'>='", "'if'", "'then'", 
			"'else'", "'while'", "'do'", "'repeat'", "'until'", "'for'", "'to'", 
			"'downto'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "ID", "CONSTINT", "CONSTREAL", "CONSTLIT", 
			"WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PascalLike.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private int tabLevel = 0;
	    private final String TAB = "\t"; 
	    private boolean programVars = true;
	    private String globalVars = "";
	    
	    private String funcName = null;
	    
	    private String getTab() {
	        return TAB.repeat(tabLevel);
	    }
	    
	    private void increaseTab() {
	        tabLevel++;
	    }
	    
	    private void decreaseTab() {
	    	if(tabLevel > 0) tabLevel--;
	    }

	public PascalLikeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public BloqueContext main;
		public TerminalNode ID() { return getToken(PascalLikeParser.ID, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public DeclistContext declist() {
			return getRuleContext(DeclistContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalLikeListener ) ((PascalLikeListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalLikeListener ) ((PascalLikeListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			setState(123);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				match(T__0);
				setState(111);
				match(ID);
				setState(112);
				match(T__1);
				setState(113);
				((ProgramaContext)_localctx).main = bloque();
				setState(114);
				match(T__2);
				System.out.print("void main ( void ) {\n" + globalVars + "\t" + ((ProgramaContext)_localctx).main.main.replace("\n", "\n\t")); System.out.print("\n}");
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				match(T__3);
				setState(118);
				match(ID);
				setState(119);
				match(T__1);
				setState(120);
				declist();
				setState(121);
				match(T__2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BloqueContext extends ParserRuleContext {
		public String main;
		public SentlistContext s;
		public DeclistContext declist() {
			return getRuleContext(DeclistContext.class,0);
		}
		public SentlistContext sentlist() {
			return getRuleContext(SentlistContext.class,0);
		}
		public BloqueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalLikeListener ) ((PascalLikeListener)listener).enterBloque(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalLikeListener ) ((PascalLikeListener)listener).exitBloque(this);
		}
	}

	public final BloqueContext bloque() throws RecognitionException {
		BloqueContext _localctx = new BloqueContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_bloque);
		try {
			enterOuterAlt(_localctx, 1);
			{
			if(!programVars)increaseTab();
			setState(126);
			declist();
			setState(127);
			match(T__4);
			setState(128);
			((BloqueContext)_localctx).s = sentlist();
			setState(129);
			match(T__5);
			((BloqueContext)_localctx).main =  ((BloqueContext)_localctx).s.content.replace("write", "printf"); decreaseTab();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclistContext extends ParserRuleContext {
		public Declist_item_listContext declist_item_list() {
			return getRuleContext(Declist_item_listContext.class,0);
		}
		public DeclistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalLikeListener ) ((PascalLikeListener)listener).enterDeclist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalLikeListener ) ((PascalLikeListener)listener).exitDeclist(this);
		}
	}

	public final DeclistContext declist() throws RecognitionException {
		DeclistContext _localctx = new DeclistContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			declist_item_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declist_item_listContext extends ParserRuleContext {
		public Declist_itemContext declist_item() {
			return getRuleContext(Declist_itemContext.class,0);
		}
		public Declist_item_listContext declist_item_list() {
			return getRuleContext(Declist_item_listContext.class,0);
		}
		public Declist_item_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declist_item_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalLikeListener ) ((PascalLikeListener)listener).enterDeclist_item_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalLikeListener ) ((PascalLikeListener)listener).exitDeclist_item_list(this);
		}
	}

	public final Declist_item_listContext declist_item_list() throws RecognitionException {
		Declist_item_listContext _localctx = new Declist_item_listContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declist_item_list);
		try {
			setState(139);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
			case T__8:
			case T__13:
			case T__14:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				declist_item();
				System.out.print("\n");
				setState(136);
				declist_item_list();
				}
				break;
			case T__2:
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declist_itemContext extends ParserRuleContext {
		public ConstdeclContext constdecl() {
			return getRuleContext(ConstdeclContext.class,0);
		}
		public VardeclContext vardecl() {
			return getRuleContext(VardeclContext.class,0);
		}
		public ProcdeclContext procdecl() {
			return getRuleContext(ProcdeclContext.class,0);
		}
		public FuncdeclContext funcdecl() {
			return getRuleContext(FuncdeclContext.class,0);
		}
		public Declist_itemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declist_item; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalLikeListener ) ((PascalLikeListener)listener).enterDeclist_item(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalLikeListener ) ((PascalLikeListener)listener).exitDeclist_item(this);
		}
	}

	public final Declist_itemContext declist_item() throws RecognitionException {
		Declist_itemContext _localctx = new Declist_itemContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declist_item);
		try {
			setState(149);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				constdecl();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				vardecl();
				programVars = false;
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 3);
				{
				programVars = false;
				setState(146);
				procdecl();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 4);
				{
				programVars = false;
				setState(148);
				funcdecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstdeclContext extends ParserRuleContext {
		public CtelistContext ctelist;
		public CtelistContext ctelist() {
			return getRuleContext(CtelistContext.class,0);
		}
		public ConstdeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constdecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalLikeListener ) ((PascalLikeListener)listener).enterConstdecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalLikeListener ) ((PascalLikeListener)listener).exitConstdecl(this);
		}
	}

	public final ConstdeclContext constdecl() throws RecognitionException {
		ConstdeclContext _localctx = new ConstdeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_constdecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(T__6);
			setState(152);
			((ConstdeclContext)_localctx).ctelist = ctelist();
			System.out.print(((ConstdeclContext)_localctx).ctelist.result);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CtelistContext extends ParserRuleContext {
		public String result;
		public Token ID;
		public SimovalueContext simovalue;
		public Ctelist_tailContext ctelist_tail;
		public TerminalNode ID() { return getToken(PascalLikeParser.ID, 0); }
		public SimovalueContext simovalue() {
			return getRuleContext(SimovalueContext.class,0);
		}
		public Ctelist_tailContext ctelist_tail() {
			return getRuleContext(Ctelist_tailContext.class,0);
		}
		public CtelistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ctelist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalLikeListener ) ((PascalLikeListener)listener).enterCtelist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalLikeListener ) ((PascalLikeListener)listener).exitCtelist(this);
		}
	}

	public final CtelistContext ctelist() throws RecognitionException {
		CtelistContext _localctx = new CtelistContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ctelist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			((CtelistContext)_localctx).ID = match(ID);
			setState(156);
			match(T__7);
			setState(157);
			((CtelistContext)_localctx).simovalue = simovalue();
			setState(158);
			match(T__1);
			((CtelistContext)_localctx).result =  "#define " + (((CtelistContext)_localctx).ID!=null?((CtelistContext)_localctx).ID.getText():null) + " " + (((CtelistContext)_localctx).simovalue!=null?_input.getText(((CtelistContext)_localctx).simovalue.start,((CtelistContext)_localctx).simovalue.stop):null) + "\n";
			setState(160);
			((CtelistContext)_localctx).ctelist_tail = ctelist_tail();
			_localctx.result += ((CtelistContext)_localctx).ctelist_tail.result;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ctelist_tailContext extends ParserRuleContext {
		public String result;
		public CtelistContext ctelist;
		public CtelistContext ctelist() {
			return getRuleContext(CtelistContext.class,0);
		}
		public Ctelist_tailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ctelist_tail; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalLikeListener ) ((PascalLikeListener)listener).enterCtelist_tail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalLikeListener ) ((PascalLikeListener)listener).exitCtelist_tail(this);
		}
	}

	public final Ctelist_tailContext ctelist_tail() throws RecognitionException {
		Ctelist_tailContext _localctx = new Ctelist_tailContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ctelist_tail);
		try {
			setState(167);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(163);
				((Ctelist_tailContext)_localctx).ctelist = ctelist();
				((Ctelist_tailContext)_localctx).result =  ((Ctelist_tailContext)_localctx).ctelist.result;
				}
				break;
			case T__2:
			case T__4:
			case T__6:
			case T__8:
			case T__13:
			case T__14:
				enterOuterAlt(_localctx, 2);
				{
				((Ctelist_tailContext)_localctx).result =  "";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
